--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                      <a class="nav-link" href="https://github.com/oluokunkabiru" target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-github m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="https://wa.me/08130584550"  target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-whatsapp-square m-2"></i></span></a>
+                     <a class="nav-link" href="https://wa.me/+2348130584550"  target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-whatsapp-square m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
                      <a class="nav-link" href="https://www.linkedin.com/in/oluokun-kabir-adesina-58125b163/" target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-linkedin m-2"></i></span></a>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-1"></div>
                <div class="col-md-5 introduction">
-                <h4 class="text-cente text-light font-weight-bold mt-sm-5 bg-info p-1 rounded" id="greet" ></h4>
+                <!-- <h4 class="text-cente text-light font-weight-bold mt-sm-5 bg-info p-1 rounded" id="greet" ></h4> -->
                 <h3 class="text-center text-light font-weight-bold mt-sm-5" >Hello</h3>
                 <h1 class="text-center text-light font-weight-bold p-2">I'M OLUOKUN KABIRU ADESINA</h1>
                 <h4 class="text-light text-center p-3 ">I'm a Creative Software Developer</h4>
@@ -290,7 +290,7 @@
                           <table class="ml-5 mr-3">
                             <tr>
                                 <td><a href="https://www.facebook.com/oluokunkabir.adeshina/"  target="_blank"><span class="text-light"><i class="fab fa-facebook-square m-2" style="font-size: 30px"></i></span></a></td>
-                                <td><a href=""><span class="text-light"><i class="fab fa-whatsapp-square m-2" style="font-size: 30px"></i></span></a></td>
+                                <td><a href="https://wa.me/+2348130584550"><span class="text-light"><i class="fab fa-whatsapp-square m-2" style="font-size: 30px"></i></span></a></td>
                                 <td><a  href="https://twitter.com/DevKabirOluokun" target="_blank"><span class="text-light"><i class="fab fa-twitter-square m-2" style="font-size: 30px"></i></span></a></td>
                                 <td><a  href="https://github.com/oluokunkabiru" target="_blank" ><span class="text-light"><i class="fab fa-github m-2" style="font-size: 30px"></i></span></a></td>
                             </tr>
